# google-reviews-sentiment

./: LICENSE  README.md  pyproject.toml
app/: chains.py  config.py  main.py  schemas.py  ui.py
app/review_clients/: __init__.py  base.py  google_places.py
app/utils/: text_clean.py
